# nimbus-gpt

./: .gitignore  pyproject.toml
src/: knowledge.docx  main.py  prompts.py  rental_functions.py
